Arrange design history by month

--- a/app/views/history/imported-from-ucas.html
+++ b/app/views/history/imported-from-ucas.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'UCAS course information' %}
+{% set title = 'Course folding and UCAS course details' %}
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
