--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -14,8 +14,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-
-      <h2 class="heading-large">Manage courses designs</h2>
+      <h2 class="heading-medium">July 2018</h2>
 
       <h3 class="heading-small">
         <a href="/history/templates">Course templates</a>
@@ -44,6 +43,8 @@
       <p>
         Request access for users.
       </p>
+
+      <h2 class="heading-medium">June 2018</h2>
 
       <h3 class="heading-small">
         <a href="/history/check-ucas-data">Check your UCAS data (Initial launch)</a>
@@ -108,7 +109,27 @@
         Indicate the raw information we’ve received from UCAS, begin to explain where this must be edited and how we are handling that information.
       </p>
 
-      <h2 class="heading-large">Early designs</h2>
+      <h3 class="heading-small">
+        <a href="/history/sign-in-pre-register-user">Sign-in: Invite a user</a>
+      </h3>
+      <p>This is the approach we attempted first. Because of limitations with the invite email and users ending up at a dead-end, we switched to self-registration.</p>
+
+      <h3 class="heading-small">
+        <a href="/history/sign-in-self-serve-registration">Sign-in: User registers themself</a>
+      </h3>
+      <p>We send users a sign-up link so they can register and then be forwarded on to our service.</p>
+
+      <h2 class="heading-medium">May 2018 and earlier</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/imported-from-ucas">Course folding and UCAS course details</a>
+      </h3>
+      <p>Following the definition of a course, documentation on how we might fold courses based on UCAS data.</p>
+
+      <h3 class="heading-small">
+        <a href="/history/what-is-a-course">What is a course?</a>
+      </h3>
+      <p>Work to define our definition of a course.</p>
 
       <h3 class="heading-small">
         <a href="/history/course-with-variants">Course with fields to explain a user’s choice</a>
@@ -144,28 +165,6 @@
       <p>
         Breaking down data required for each course into a page-per-thing wizard.
       </p>
-
-      <h2 class="heading-large">Sign in user journeys</h2>
-
-      <h3 class="heading-small">
-        <a href="/history/sign-in-pre-register-user">Invite a user</a>
-      </h3>
-      <p>This is the approach we’re taking for onboarding new users.</p>
-
-      <h3 class="heading-small">
-        <a href="/history/sign-in-self-serve-registration">User registers themself</a>
-      </h3>
-      <p>The alternative is to provide self-serve registration, which we are not pursuing.</p>
-
-      <h2 class="heading-large">Documentation</h2>
-
-      <h3 class="heading-small">
-        <a href="/history/imported-from-ucas">UCAS course information and ‘course folding’ (May 2018)</a>
-      </h3>
-
-      <h3 class="heading-small">
-        <a href="/history/what-is-a-course">What is a course? (May 2018)</a>
-      </h3>
     </div>
   </div>
 </main>
