--- a/app/views/history/original-onboarding/index.html
+++ b/app/views/history/original-onboarding/index.html
@@ -12,7 +12,11 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
-  <p class="lede">See the <a href="https://dfedigital.atlassian.net/wiki/spaces/BaT/pages/319258638/Spreadsheet+for+private+beta">original spreadsheet on confluence</a>.</p>
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <p>The spreadsheet sent to providers rendered as a single page form. See the <a href="https://dfedigital.atlassian.net/wiki/spaces/BaT/pages/319258638/Spreadsheet+for+private+beta">original spreadsheet on confluence</a>.</p>
+    </div>
+  </div>
 
   {{ macros.screenshot('Spreadsheet as a form', 'spreadsheet-as-a-form', '/public/images/history/original-onboarding/thumbnails/01-spreadsheet-as-a-form.png', '/public/images/history/original-onboarding/01-spreadsheet-as-a-form.png', '') }}
 
