--- a/app/views/history/templates/index.html
+++ b/app/views/history/templates/index.html
@@ -157,7 +157,7 @@
 
     <h3 class="heading-small">Results</h3>
 
-    <p>Users were confused about the missing “about your organisation” and “training with a disability” fields. Most did find where to these fields eventually but the section previews should point to where information can be entered.</p>
+    <p>Users were confused about the missing “about your organisation” and “training with a disability” fields. Most did find where to add these fields eventually but the section previews should point to where information can be entered.</p>
   ') }}
 
   {{ macros.screenshot('Apply template to courses', 'apply-template-to-courses', '/public/images/history/templates/thumbnails/07-apply-template-to-courses.png', '/public/images/history/templates/07-apply-template-to-courses.png', '
