--- a/app/views/history/templates/index.html
+++ b/app/views/history/templates/index.html
@@ -49,7 +49,7 @@
         </li>
       </ul>
 
-      <h3 class="heading-medium">Sessions at providers</h3>
+      <h3 class="heading-medium">In-person moderated sessions</h3>
 
       <ul class="list">
         <li><a href="https://lookback.io/watch/6dwaSDCngbuPTiL4x">Catholic Teaching Alliance</a></li>
