Add no access design documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">July 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/no-known-organisation">When a user isn’t recognised</a>
+      </h3>
+      <p>
+        Designs for when a user’s email isn’t in our whitelist.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/templates">Course templates</a>
       </h3>
       <p>
