Rename shared org details
This is known as About your organisation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -31,7 +31,7 @@
       </p>
 
       <h3 class="heading-small">
-        <a href="/history/about-your-organisation">Shared organisation details</a>
+        <a href="/history/about-your-organisation">About your organisation</a>
       </h3>
       <p>
         Share organisation information between courses and split the organisation page across tabs.
