--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -76,7 +76,7 @@
       >
       <label for="radio-{{ name }}-part-{{ loop.index }}">
         {% if field.text %}
-          <span class="bold">{{ field.name }}</span>
+          <span class="bold">{{ field.name }}</span><br />
           {{ field.text | safe }}
         {% else %}
           {{ field.name }}
@@ -119,11 +119,14 @@
 </div>
 {% endmacro %}
 
-{% macro textbox(id, label, helpText = false, size = '') %}
+{% macro textbox(id, label, helpText = false, size = '', prefix = false) %}
 <div class="form-group">
   <label class="form-label" for="{{id}}">{{label | safe}}</label>
   {% if helpText %}
     <span class="form-hint">{{helpText | safe}}</span>
+  {% endif %}
+  {% if prefix %}
+    <span class="form-control-prefix">{{ prefix }}</span>
   {% endif %}
   <input class="form-control {{ size }}" name="{{id}}" type="text" id="{{id}}" value="{{ value(id) }}">
 </div>
