--- a/app/views/template/requirements.html
+++ b/app/views/template/requirements.html
@@ -16,9 +16,17 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <form action="/template/{{ template.slug }}" method="post">
-        {{ macros.textarea(template.slug + '-template-qualifications-required', 'Qualifications needed', 8, 'The minimum academic qualifications required for this course.', 100) }}
-        {{ macros.textarea(template.slug + '-template-personal-qualities', 'Personal qualities (optional)', 8, 'Any specific qualities you look for in a candidate. For example, confidence in talking to large groups.', 100) }}
-        {{ macros.textarea(template.slug + '-template-other-requirements', 'Other requirements (optional)', 8, 'Non-academic requirements, eg DBS checks or work experience, if relevant.', 100) }}
+        <h2 class="heading-large">Qualifications needed</h2>
+        <p>Explain the minimum academic qualifications needed for this course, in addition to the basic national requirements.</p>
+        {{ macros.textarea(template.slug + '-template-qualifications-required', 'Qualifications needed', 8, null, 100) }}
+
+        <h2 class="heading-large">Personal qualities</h2>
+        <p>Tell applicants about the skills and motivation you’re looking for (eg experience with children, a genuine passion for teaching, or a talent for public speaking).</p>
+        {{ macros.textarea(template.slug + '-template-personal-qualities', 'Personal qualities (optional)', 8, null, 100) }}
+
+        <h2 class="heading-large">Other requirements</h2>
+        <p>If applicants need any non-academic qualifications or documents, list them here (eg criminal record checks, or relevant work experience).</p>
+        {{ macros.textarea(template.slug + '-template-other-requirements', 'Other requirements (optional)', 8, null, 100) }}
 
         <div class="add-double-bottom-margin">
           <input type="submit" class="button" value="Save" />
