Tweak salary guidance
Remove point about course differences, that should be in About this course.

Merge fees points.

--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -62,9 +62,7 @@
           <p>You can include:</p>
           <ul class="list list-bullet">
             <li>an indication of the salary</li>
-            <li>that there are no fees for this course</li>
-            <li>any top up fees or other costs</li>
-            <li>how a salaried course differs from a fee paying course</li>
+            <li>whether there are any fees or others costs – if there are no fees for this course, say so</li>
           </ul>
 
           {{ macros.textarea(course.programmeCode + '-salary-details', 'Salary', 10, null, 250) }}
