State, not explain
Qualifications don't need to be explained.

--- a/app/views/template/requirements.html
+++ b/app/views/template/requirements.html
@@ -17,7 +17,7 @@
     <div class="column-two-thirds">
       <form action="/template/{{ template.slug }}" method="post">
         <h2 class="heading-large">Qualifications needed</h2>
-        <p>Explain the minimum academic qualifications needed for this course, in addition to the basic national requirements.</p>
+        <p>State the minimum academic qualifications needed for this course, in addition to the basic national requirements.</p>
         {{ macros.textarea(template.slug + '-template-qualifications-required', 'Qualifications needed', 8, null, 100) }}
 
         <h2 class="heading-large">Personal qualities</h2>
