--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -16,7 +16,7 @@
     <div class="column-two-thirds">
       <form action="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" method="post">
         <h2 class="heading-large">Qualifications needed</h2>
-        <p>Explain the minimum academic qualifications needed for this course, in addition to the basic national requirements.</p>
+        <p>State the minimum academic qualifications needed for this course, in addition to the basic national requirements.</p>
 
         {{ macros.textarea(course.programmeCode + '-qualifications-required', 'Qualifications needed', 8, null, 100) }}
 
