Salary field tweak
Be more assertive that this information is needed.

--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -39,7 +39,7 @@
           <h3 class="heading-large">Salary</h4>
 
           <p>Give details about the salary for this course.</p>
-          <p>You can include:</p>
+          <p>You should include:</p>
           <ul class="list list-bullet">
             <li>an indication of the salary</li>
             <li>whether there are any fees or others costs – if there are no fees for this course, say so</li>
