Minor copy tweaks to salary fields

--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -39,10 +39,10 @@
           <h3 class="heading-large">Salary</h4>
 
           <p>Give details about the salary for this course.</p>
-          <p>You should include:</p>
+          <p>You should:</p>
           <ul class="list list-bullet">
-            <li>an indication of the salary</li>
-            <li>whether there are any fees or others costs – if there are no fees for this course, say so</li>
+            <li>give an indication of the salary</li>
+            <li>say whether there are any fees or others costs – if there are no fees for this course, you should also say so</li>
           </ul>
 
           {{ macros.textarea(course.programmeCode + '-salary-details', 'Salary', 10, null, 250) }}
