First stab at financial support field
https://dfedigital.atlassian.net/browse/BATSA-458

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -88,6 +88,7 @@
                 {{ macros.coursePart(course.programmeCode + '-fee-international', 'Fee for international students (optional)') }}
                 {{ macros.coursePart(course.programmeCode + '-fee-details', 'Fee details (optional)') }}
               {% endif %}
+              {{ macros.coursePart(course.programmeCode + '-financial-support', 'Financial support you offer (optional)') }}
             </dl>
           </li>
           <li class="course-parts-item">
