--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -64,7 +64,16 @@
 
           {{ macros.textarea(course.programmeCode + '-fee-details', 'Fee details (optional)', 10, null, 250) }}
         {% endif %}
+      </div>
+    </div>
 
+    <div class="grid-row">
+      <div class="column-two-thirds">
+        <h2 class="heading-large">Financial support you offer</h2>
+        <p>If applicable, give further details about the financial support you provide for this course. For example any bursaries you provide.</p>
+        <p>Information about DfE bursaries and subject scholarships will be included automatically.</p>
+
+        {{ macros.textarea(course.programmeCode + '-financial-support', 'Financial support you offer (optional)', 10, null, 250) }}
       </div>
     </div>
 
