--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -206,6 +206,23 @@
 </div>
 {% endmacro %}
 
+{% macro feesCoursePart(id, label) %}
+<div>
+  <dt class="course-part-label">
+    {{ label }}
+  </dt>
+  {% if (value(id)) %}
+    <dd class="course-part-value">
+      £{{ value(id) }}
+    </dd>
+  {% else %}
+    <dd class="course-part-value course-part-value--empty">
+      This field is empty
+    </dd>
+  {% endif %}
+</div>
+{% endmacro %}
+
 {% macro previewPart(id) %}
   {% if (value(id)) %}
     <pre class="preview-pre">{{ value(id) }}</pre>
