--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -71,7 +71,7 @@
       <div class="column-two-thirds">
         <h2 class="heading-large">Financial support you offer</h2>
         <p>If applicable, give further details about the financial support you provide for this course. For example any bursaries you provide.</p>
-        <p>Information about DfE bursaries and subject scholarships will be included automatically.</p>
+        <p>You don’t need to add details of any DfE bursaries and subject scholarships here. These will be published automatically to your course page</p>
 
         {{ macros.textarea(course.programmeCode + '-financial-support', 'Financial support you offer (optional)', 10, null, 250) }}
       </div>
