--- a/app/views/course.html
+++ b/app/views/course.html
@@ -95,6 +95,8 @@
   {% endif %}
 
   <dl class="aligned add-top-margin add-double-bottom-margin">
+    <dt>UCAS status:</dt>
+    <dd>Running</dd>
     <dt>Training provider code:</dt>
     <dd>{{ course.providerCode }}</dd>
     <dt>Training programme code:</dt>
