--- a/app/views/course/from-ucas.html
+++ b/app/views/course/from-ucas.html
@@ -24,6 +24,8 @@
   <dl class="aligned add-top-margin">
     <dt>Name:</dt>
     <dd>{{ ucasCourse.name }}</dd>
+    <dt>Status:</dt>
+    <dd>Running</dd>
     <dt>Training provider code:</dt>
     <dd>{{ ucasCourse.providerCode }}</dd>
     <dt>Training programme code:</dt>
