--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -25,6 +25,7 @@
             <th class="code-col" style="width: 40px">Code</th>
             <th class="subject-col" style="width: 30%">Subject</th>
             <th class="type-col">Type</th>
+            <th class="status-col">UCAS status</th>
           </tr>
         </thead>
         <tbody>
@@ -35,6 +36,7 @@
                 <td>{{ course.programmeCode }}</td>
                 <td><a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}">{{ course.name }}</a></td>
                 <td>{{ course.options }}</td>
+                <td>Running</td>
               </tr>
               {% set subjectName = course.name %}
             {% endif %}
