Link to UCAS course status design

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">July 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/ucas-course-status">Course statuses</a>
+      </h3>
+      <p>
+        An iteration on the <a href="/history/check-ucas-data">onboarding design</a> (read-only) to include course status.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/salary-and-fees">Salary and fees</a>
       </h3>
       <p>
