--- a/app/views/history/ucas-course-status/index.html
+++ b/app/views/history/ucas-course-status/index.html
@@ -26,6 +26,11 @@
         <li>Discontinued</li>
       </ul>
 
+      <p>
+        View design: <br/>
+        <a href="https://publish-courses-check-ucas.herokuapp.com/courses">https://publish-courses-check-ucas.herokuapp.com/courses</a>
+      </p>
+
       <h2 class="heading-medium">UCAS guidance on status</h2>
       <p><a href="https://www.ucas.com/sites/default/files/utt-set-up-guide-2015.pdf">UCAS Teacher training set up guide</a></p>
 
